# Azure-Kinect-Tutorial

./: Open3D_pipeline.md  intro-AK-SDK.md
ManipulateAK/: CMakeLists.txt  ManipulteAK.cpp  mkv_Process.cpp  output.mkv
ReconstructionSystem/sensors/: azure_kinect_mkv_reader.py
